# src/routes/tokenRoutes.js
@@ -7,6 +7,8 @@ const controller = require("../controller/authenticationController");
 router.get("/:access_token", controller.getAuthenticatedToken);
 // Route to create a new token
 router.post("/", controller.createToken);
+// Route to update the token
+router.put("/:id", controller.updateToken);
 // Route to delete a token by ID
 router.delete("/:access_token", controller.deleteTokenById);
 
